# matching-logic-mm0

./: .gitignore  .gitmodules  00-matching-logic.mm0  01-propositional.mm1  02-ml-normalization.mm1  10-theory-definedness.mm0  10-theory-definedness.mm1  11-definedness-normalization.mm1  12-proof-system-h.mm1  12-proof-system-p.mm1  12-properties-of-proof-system-h.mm1  13-fixedpoints.mm1  20-theory-words.mm0  20-theory-words.mm1  21-words-helpers.mm1  21-words-normalization.mm1  22-assumptions.mm0  22-assumptions.mm1  22-words-salomaa.mm1  22-words-theorems.mm1  23-words-fixedpoints.mm1  23-words-theorems.mm1  24-words-derivatives.mm1  25-example.mm1  README.md  _automation.mm1  abstract.md  benchmark-agregator.py  benchmarks.py  combined.mm0  conftest.py  context_free_grammar.mm0  definedness-core.mm1  definedness.mm1  gen-proof  install.sh  matching-logic.mm0  maude.py  proof-gen.py  propositional.mm1  (+11 more)
.build/: benchmarks.csv
archive/: README
artifact/: 01-propositional.mm1  02-ml-normalization.mm1  10-theory-definedness.mm0  12-proof-system-p.mm1  22-words-theorems.mm1  LICENSE  benchmark-agregator.py  install-deps  test  test.py
nominal/: core.mm1  lambda.mm1  lemmas.mm1
proof-gen/: README.md  proof-gen.maude  test
regexp-proof-gen/: regexp.maude  regexp.mm1
words/: 20-theory-words.mm0  21-words-helpers.mm1  23-words-theorems.mm1  maude.py  proof-gen.py
